[package]
name = "fingerprinting"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
md5 = "0.8.0"

[dependencies.web-sys]
version = "0.3.69"
features = [
  "Window",
  "Document",
  "Navigator",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "WebGlRenderingContext",
  "WebglDebugRendererInfo",
  "Screen",
  "AudioContext",
  "BaseAudioContext",
  "OfflineAudioContext",
  "OscillatorNode",
  "GainNode",
  "AudioDestinationNode",
  "HtmlSpanElement",
  "DomRect"
]
